# rust-p2p-chat

./: .gitignore  Cargo.toml  LICENSE  README.md  p2p-chat.nsi
src/: main.rs
wix/: main.wxs
