[package]
name = "p2p-chat"
version = "0.1.0"
edition = "2021"
author = "Yoelvis Oliveros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = {version = "0.49.0",  features = ["full"]}
tokio = {version = "1.21.2", features = ["full"]}

